Логика связывания app_user/applicant/employer Создание резюме и отклик на вакансию
