# src/main/java/com/web3/with/service/api/VacancyService.java
@@ -38,4 +38,6 @@ public interface VacancyService {
      */
     VacanciesRs getVacanciesByKeyword(int pageNumber, String keyword);
 
+
+    void applyResumeById(Long id, Long resumeId);
 }
